--- a/proj4/core/build.gradle
+++ b/proj4/core/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile group: 'org.postgresql:postgresql:+'
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1208'
 }
