--- a/proj5/build.gradle
+++ b/proj5/build.gradle
@@ -11,7 +11,7 @@ subprojects {
 
     dependencies {
         compile 'ch.qos.logback:logback-classic:+'
-        compileOnly 'org.projectlombok:lombok:+'
+        compile 'org.projectlombok:lombok:+'
         testCompile 'junit:junit:+'
     }
 }
