--- a/proj5/webchat/build.gradle
+++ b/proj5/webchat/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'war'
 
 dependencies {
+    compile 'org.jsoup:jsoup:+'
     providedCompile 'org.apache.tomcat:tomcat-api:+'
     compile 'javax.websocket:javax.websocket-api:1.0'
     compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1208'
