--- a/proj5/settings.gradle
+++ b/proj5/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'proj5'
-
 include 'webservlet'
-include 'core'
+include 'dao'
+include 'jdbc'
 include 'jsonchat'
 include 'webchat'
-
+include 'webservlet'
