--- a/proj5/crud/build.gradle
+++ b/proj5/crud/build.gradle
@@ -1,9 +1,12 @@
+version '1.1'
+
+apply plugin: 'java'
 apply plugin: 'war'
 
 dependencies {
+    compile 'javax.servlet:jstl:1.2'
     compile 'org.postgresql:postgresql:+'
     compile 'javax.websocket:javax.websocket-api:1.0'
-    compile 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1'
     providedCompile 'org.apache.tomcat:tomcat-api:+'
     providedCompile 'org.apache.tomcat:tomcat-jasper:+'
 }
