--- a/proj5/jsonchat/build.gradle
+++ b/proj5/jsonchat/build.gradle
@@ -1,7 +1,11 @@
 apply plugin: 'war'
-
+version ''
 dependencies {
-    providedCompile 'org.apache.tomcat:tomcat-api:+'
-    compile 'javax.websocket:javax.websocket-api:+'
+    compile 'javax.servlet:jstl:+'
     compile 'org.postgresql:postgresql:+'
+    compile 'com.google.code.gson:gson:+'
+    compile 'org.apache.activemq:activemq-core:+'
+    compile 'javax.websocket:javax.websocket-api:+'
+    providedCompile 'org.apache.tomcat:tomcat-api:+'
+    providedCompile 'org.apache.tomcat:tomcat-jasper:+'
 }
