--- a/proj5/webchat/build.gradle
+++ b/proj5/webchat/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'war'
 
 dependencies {
+    compile 'javax.servlet:jstl:1.2'
     compile 'org.postgresql:postgresql:+'
     compile 'javax.websocket:javax.websocket-api:1.0'
     compile 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1'
