--- a/proj6/pom.xml
+++ b/proj6/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example.employees</groupId>
-    <artifactId>employees-app</artifactId>
+    <artifactId>employees</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>employees-app Maven Webapp</name>
+    <name>employees Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
         <tomcat.version>7.0.57</tomcat.version>
@@ -74,7 +74,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <finalName>employees-app-${project.version}</finalName>
+                    <finalName>employees</finalName>
                     <archive>
                         <manifest>
                             <mainClass>com.example.employees.Main</mainClass>
