--- a/social_nw/main/build.gradle
+++ b/social_nw/main/build.gradle
@@ -10,8 +10,10 @@ dependencies {
     compile 'javax.servlet:jstl:1.2'
     compile 'com.google.code.gson:gson:+'
     compile 'org.postgresql:postgresql:+'
+    compile 'com.diffplug.durian:durian:3.4.0'
     compile 'org.eclipse.persistence:eclipselink:+'
     compile 'javax.websocket:javax.websocket-api:1.0'
+    compile 'commons-fileupload:commons-fileupload:1.3.2'
     providedCompile 'org.apache.tomcat:tomcat-api:+'
     providedCompile 'org.apache.tomcat:tomcat-jasper:+'
 }
