--- a/social_nw/chat/build.gradle
+++ b/social_nw/chat/build.gradle
@@ -1,9 +1,10 @@
-version '1.1'
+version ''
 
 apply plugin: 'java'
 apply plugin: 'war'
 
 dependencies {
+    compile 'com.opencsv:opencsv:+'
     compile 'javax.mail:mail:1.4.7'
     compile 'javax.servlet:jstl:1.2'
     compile 'org.postgresql:postgresql:+'
