--- a/social_nw/main/build.gradle
+++ b/social_nw/main/build.gradle
@@ -1,12 +1,17 @@
-plugins {
-    id "io.github.divinespear.jpa-schema-generate" version "0.2.0-1"
-}
-apply plugin: "jpa-schema-generate"
+//plugins {
+//    id "io.github.divinespear.jpa-schema-generate" version "0.2.0-1"
+//}
+//apply plugin: "jpa-schema-generate"
 apply plugin: 'war'
 
 dependencies {
-    compile 'javax.mail:mail:1.4.7'
+
+//  Project modules:
+    compile project(":core");
+//  Production dependencies:
     compile 'com.opencsv:opencsv:+'
+    compile 'javax.mail:mail:1.4.7'
+    compile 'org.jsoup:jsoup:1.9.2'
     compile 'javax.servlet:jstl:1.2'
     compile 'com.google.code.gson:gson:+'
     compile 'org.postgresql:postgresql:+'
@@ -14,6 +19,9 @@ dependencies {
     compile 'org.eclipse.persistence:eclipselink:+'
     compile 'javax.websocket:javax.websocket-api:1.0'
     compile 'commons-fileupload:commons-fileupload:1.3.2'
+//  Provided dependencies:
     providedCompile 'org.apache.tomcat:tomcat-api:+'
     providedCompile 'org.apache.tomcat:tomcat-jasper:+'
+//  Test only dependencies:
+    testCompile 'com.h2database:h2:1.4.192'
 }
