--- a/social_nw/main/build.gradle
+++ b/social_nw/main/build.gradle
@@ -20,9 +20,10 @@ dependencies {
     compile 'org.eclipse.persistence:eclipselink:+'
     compile 'javax.websocket:javax.websocket-api:1.0'
     compile 'commons-fileupload:commons-fileupload:1.3.2'
+    compile 'com.fasterxml.uuid:java-uuid-generator:3.1.4'
+    compile 'com.h2database:h2:1.4.192'
 //  Provided dependencies:
     providedCompile 'org.apache.tomcat:tomcat-api:+'
     providedCompile 'org.apache.tomcat:tomcat-jasper:+'
 //  Test only dependencies:
-    testCompile 'com.h2database:h2:1.4.192'
 }
