--- a/social_nw/main/src/main/resources/h2.db.properties
+++ b/social_nw/main/src/main/resources/h2.db.properties
@@ -1,5 +1,5 @@
 driver=org.h2.Driver
-url=jdbc:h2:file:C:/data/test;AUTO_SERVER=TRUE;;DB_CLOSE_DELAY=-1
-user=sa
+url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+user=
 password=
 poolSize=5
